--- a/index.html
+++ b/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>وبلاگ شخصی محمود زمانی</title>
-	<link rel="stylesheet" href="dist/css/style.css"/>
+    <title>وبلاگ شخصی محمود زمانی</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
+    <meta name="author" content="Mahmood zamani (imahmoodz)">
+    <meta name="keywords" content="محمودزمانی">
+    <meta name="description" content="صفحه معرفی محمود زمانی توسعه دهنده وب">
+    <meta name="robots" content="index follow">
+    <meta name="copyright" content="2016">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="محمود زمانی">
+    <meta property="og:url" content="www.mahmoodzamani.ir">
+    <meta property="og:title" content="محمود زمانی">
+    <meta property="og:description" content="صفحه معرفی محمود زمانی توسعه دهنده وب">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <link rel="stylesheet" href="dist/css/style.css"/>
 </head>
 <body class="rtl">
 	<figure class="intro animated fadeIn">
@@ -16,8 +28,7 @@
 				<div class="sk">شبکه های اجتماعی</div>
 				<div class="social">
 					<ul>
-						<li><a href="http://www.mahmoodzamani.ir/blog"><i class="icon-quill"></i>
-						</a></li>
+						
 						<li><a href="http://www.codepen.io/imahmoodz"><i class="icon-codepen"></i>
 						</a></li>
 						<li><a href="http://www.telegram.me/imahmoodz"><i class="icon-telegram"></i>
@@ -30,9 +41,9 @@
 					</ul>
 				</div>
 				<div>
-					<div class="btn-old">
+					<!--<div class="btn-old">
 					<a class="btn" href="http://www.mahmoodzamani.ir/blog">وبلاگ</a>
-				</div>
+					</div>-->
 				</div>
 			</figcaption>
 	</figure>
