--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>وبلاگ شخصی محمود زمانی</title>
+    <title>محمود زمانی</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no, width=device-width">
@@ -28,22 +28,18 @@
 				<div class="sk">شبکه های اجتماعی</div>
 				<div class="social">
 					<ul>
-						
 						<li><a href="http://www.codepen.io/imahmoodz"><i class="icon-codepen"></i>
 						</a></li>
 						<li><a href="http://www.telegram.me/imahmoodz"><i class="icon-telegram"></i>
 						</a></li>
 						<li>
-							<a href="http://www.github.com/imahmoodz"><i class="icon-github"></i>
+						<a href="http://www.github.com/imahmoodz"><i class="icon-github"></i>
 						</a></li>
 						<li><a href="http://www.twitter.com/imahmoodz"><i class="icon-twitter"></i>
 						</a></li>
 					</ul>
 				</div>
 				<div>
-					<!--<div class="btn-old">
-					<a class="btn" href="http://www.mahmoodzamani.ir/blog">وبلاگ</a>
-					</div>-->
 				</div>
 			</figcaption>
 	</figure>
