--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
 						</a></li>
 						<li><a href="http://www.telegram.me/imahmoodz"><i class="icon-telegram"></i>
 						</a></li>
-						<li>
-						<a href="http://www.github.com/imahmoodz"><i class="icon-github"></i>
-						</a></li>
 						<li><a href="http://www.twitter.com/imahmoodz"><i class="icon-twitter"></i>
+						</a></li>	
+						<li><a href="http://www.github.com/imahmoodz"><i class="icon-github"></i>
 						</a></li>
+						
 					</ul>
 				</div>
 				<div>
